# benchmarks

./: .gitignore  README.md  build.sbt
adhoc/: Cargo.toml
adhoc/src/: main.rs
configs/laptop/: ballista-config.properties
datafusion/: Cargo.toml  Dockerfile  README.md
datafusion/src/: main.rs
docs/: node-setup.md
results/0.2.5-SNAPSHOT/: README.md
results/0.2.5-SNAPSHOT/desktop/: jvm-12cpu-2048mb.txt  jvm-3cpu-2048mb.txt  jvm-6cpu-2048mb.txt  jvm-9cpu-2048mb.txt  jvm-csv-12cpu-2048mb.txt  jvm-csv-1cpu-2048mb.txt  jvm-csv-3cpu-2048mb.txt  jvm-csv-6cpu-2048mb.txt  jvm-csv-9cpu-2048mb.txt  rust-12cpu-2048mb.txt  rust-3cpu-2048mb.txt  rust-6cpu-2048mb.txt  rust-9cpu-2048mb.txt  rust-csv-12cpu-2048mb.txt  rust-csv-1cpu-2048mb.txt  rust-csv-3cpu-2048mb.txt  rust-csv-6cpu-2048mb.txt  rust-csv-9cpu-2048mb.txt  rust-parquet-12cpu-2048mb.txt  rust-parquet-3cpu-2048mb.txt  rust-parquet-6cpu-2048mb.txt  rust-parquet-9cpu-2048mb.txt  spark-12cpu-2048mb.txt  spark-3cpu-2048mb.txt  spark-6cpu-2048mb.txt  spark-9cpu-2048mb.txt  spark-csv-12cpu-2048mb.txt  spark-csv-1cpu-2048mb.txt  spark-csv-3cpu-2048mb.txt  spark-csv-6cpu-2048mb.txt  spark-csv-9cpu-2048mb.txt  spark-parquet-12cpu-2048mb.txt  spark-parquet-3cpu-2048mb.txt  spark-parquet-6cpu-2048mb.txt  spark-parquet-9cpu-2048mb.txt
results/0.2.5-SNAPSHOT/laptop/: jvm-12cpu-2048mb.txt  jvm-1cpu-2048mb.txt  jvm-3cpu-2048mb.txt  jvm-6cpu-2048mb.txt  jvm-9cpu-2048mb.txt  rust-12cpu-2048mb.txt  rust-1cpu-2048mb.txt  rust-3cpu-2048mb.txt  rust-6cpu-2048mb.txt  rust-9cpu-2048mb.txt  spark-12cpu-2048mb.txt  spark-1cpu-2048mb.txt  spark-3cpu-2048mb.txt  spark-6cpu-2048mb.txt  spark-9cpu-2048mb.txt
results/0.2.5/desktop/: jvm-csv-12cpu.csv  jvm-csv-3cpu.csv  jvm-csv-6cpu.csv  jvm-csv-9cpu.csv  rust-csv-12cpu.csv  rust-csv-3cpu.csv  rust-csv-6cpu.csv  rust-csv-9cpu.csv  rust-parquet-3cpu.csv  rust-parquet-6cpu.csv  rust-parquet-9cpu.csv  spark-csv-12cpu.csv  (+7 more)
spark/: README.md  build-docker-image.sh  build.gradle
split/: Cargo.toml
split/src/: main.rs
tool/: Cargo.toml
tool/src/: main.rs
tpch/rust/: Cargo.toml
(+48 files in other folders)
