[package]
name = "adhoc"
version = "0.1.0"
authors = ["Andy Grove <andygrove73@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { path = "../../arrow/rust/arrow" }
datafusion = { path = "../../arrow/rust/datafusion" }
parquet = { path = "../../arrow/rust/parquet" }
tokio = { version = "0.2", features = ["full"] }
crossbeam = "0.7"
smol = { version = "0.1.18", features = ["tokio02"] }
