[package]
name = "df-bench-nyc-taxi"
version = "0.1.0"
authors = ["Andy Grove <andygrove73@gmail.com>"]
edition = "2018"

[dependencies]
arrow = "0.14.1"
parquet = "0.14.1"
datafusion = "0.14.1"
parquet-format = "< 2.6.0"
clap = "2.33.0"
rocket = "0.4.0"
rocket_codegen = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]


