[package]
name = "df-bench-nyc-taxi"
version = "0.1.0"
authors = ["Andy Grove <andygrove73@gmail.com>"]
edition = "2018"

[dependencies]
arrow = { git = "https://github.com/apache/arrow" }
parquet = { git = "https://github.com/apache/arrow"}
datafusion = { git = "https://github.com/apache/arrow" }

#arrow = { path = "../../arrow/rust/arrow" }
#parquet = { path = "../../arrow/rust/parquet" }
#datafusion = { path = "../../arrow/rust/datafusion" }

clap = "2.33.0"
rocket = "0.4.0"
rocket_codegen = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]


