[package]
name = "tool"
version = "0.1.0"
authors = ["Andy Grove <andygrove73@gmail.com>"]
edition = "2018"

[dependencies]
#plotters = { git = "https://github.com/38/plotters.git" }
plotters = { git = "https://github.com/38/plotters.git", default_features = false, features = ["svg", "line_series", "point_series"] }
csv = "1.1.3"